# gnome-settings-daemon

./: configure.ac
data/: Makefile.am  org.gnome.settings-daemon.plugins.connman.gschema.xml.in.in  org.gnome.settings-daemon.plugins.gschema.xml.in.in
plugins/: Makefile.am
plugins/connman/: Makefile.am  connman.gnome-settings-plugin.in  gsd-connman-manager.c  gsd-connman-manager.h  gsd-connman-plugin.c
plugins/identity/: Makefile.am  gsd-alarm.c  gsd-alarm.h  gsd-identity-manager-private.h  gsd-identity-manager.c  gsd-identity-manager.h  gsd-identity-plugin.c  gsd-identity.h  gsd-kerberos-identity-manager.c  gsd-kerberos-identity.c  gsd-kerberos-identity.h  test-identity.c
